--- a/info.yaml
+++ b/info.yaml
@@ -1,9 +1,9 @@
 # Tiny Tapeout project information
 project:
-  title:        "Test Verilog File"      # Project title
+  title:        "MIPS32 Control Unit"      # Project title
   author:       "Eehit Mukherjee"      # Your name
   discord:      ""      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
-  description:  ""      # One line description of what your project does
+  description:  "Takes in the last 6 bits and the first 6 bits of a 32-bit instruction to instil control in a MIPS32 CPU "  # One line description of what your project does
   language:     "Verilog" # other examples include SystemVerilog, Amaranth, VHDL, etc
   clock_hz:     0       # Clock frequency in Hz (or 0 if not applicable)
 
@@ -22,34 +22,34 @@ project:
 # The pinout of your project. Leave unused pins blank. DO NOT delete or add any pins.
 pinout:
   # Inputs
-  ui[0]: ""
-  ui[1]: ""
-  ui[2]: ""
-  ui[3]: ""
-  ui[4]: ""
-  ui[5]: ""
+  ui[0]: "OPcode 0"
+  ui[1]: "OPcode 1"
+  ui[2]: "OPcode 2"
+  ui[3]: "OPcode 3"
+  ui[4]: "OPcode 4"
+  ui[5]: "OPcode 5"
   ui[6]: ""
   ui[7]: ""
 
   # Outputs
-  uo[0]: ""
-  uo[1]: ""
-  uo[2]: ""
-  uo[3]: ""
-  uo[4]: ""
-  uo[5]: ""
-  uo[6]: ""
+  uo[0]: "Branch"
+  uo[1]: "MemWrite"
+  uo[2]: "MemRead"
+  uo[3]: "RegWrite"
+  uo[4]: "MemtoReg"
+  uo[5]: "ALUSrc"
+  uo[6]: "RegDst"
   uo[7]: ""
 
   # Bidirectional pins
-  uio[0]: ""
-  uio[1]: ""
-  uio[2]: ""
-  uio[3]: ""
-  uio[4]: ""
-  uio[5]: ""
-  uio[6]: ""
-  uio[7]: ""
+  uio[0]: "F0"
+  uio[1]: "F1"
+  uio[2]: "F2"
+  uio[3]: "F3"
+  uio[4]: "Op0"
+  uio[5]: "Op1"
+  uio[6]: "Op3"
+  uio[7]: "Op4"
 
 # Do not change!
 yaml_version: 6
